# gpui-tray

./: Cargo.toml  README.md
examples/: tray_demo.rs
src/: icon.rs  lib.rs  tray.rs
src/tray/: tray_linux.rs  tray_macos.rs  tray_windows.rs
