[package]
name = "gpui_tray"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"

# gpui is a workspace crate inside Zed, so depend on it as a git dependency.
gpui = { git = "https://github.com/zed-industries/zed" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0"
objc = "0"
core-text = "21"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3.3"
