[package]
name = "gpui-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0"
objc2-foundation = { version = "0", features = ["NSData", "NSGeometry", "NSObject", "NSString"] }
objc2-app-kit = { version = "0", features = [
  "NSButton",
  "NSCell",
  "NSControl",
  "NSImage",
  "NSMenu",
  "NSMenuItem",
  "NSResponder",
  "NSStatusBar",
  "NSStatusBarButton",
  "NSStatusItem",
  "NSView",
  "objc2-core-foundation",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0"
